Fixed a bug with "box-sizing" set to "border-box"
Fixed a bug where the dialog box was not looking 100% as expected if the
page was having the “box-sizing” CSS property set to “border-box”, which
is the default for most of the CSS frameworks; read more at
http://paulirish.com/2012/box-sizing-border-box-ftw;

--- a/public/css/zebra_dialog.css
+++ b/public/css/zebra_dialog.css
@@ -1,3 +1,7 @@
+.ZebraDialog *,
+.ZebraDialog *:after,
+.ZebraDialog *:before  { -moz-box-sizing: content-box !important; -webkit-box-sizing: content-box !important; box-sizing: content-box !important }
+
 .ZebraDialog {
     width: 350px;
 }
@@ -27,6 +31,7 @@
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
     background: #444444;
     padding: 12px 15px;
+    line-height: 1;
 }
 
 /*  set background color here and not on ZebraDialog_Body, or you'll eventually run into problems with rounded corners
